--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -87,7 +87,7 @@ environments:
             url: jdbc:h2:mem:testDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
     production:
         dataSource:
-            dbCreate: ignore
+            dbCreate: create-drop
             driverClassName: org.postgresql.Driver
             dialect: org.hibernate.dialect.PostgreSQLDialect
             url: jdbc:postgresql://ec2-50-19-218-160.compute-1.amazonaws.com:5432/d2bo4c025aamd1
